--- a/scss/_title_main.scss
+++ b/scss/_title_main.scss
@@ -1,20 +1,16 @@
 main {
   width: 70%;
-  //background-color: pink;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   .container-content {
     display: flex;
     flex-direction: column;
-    //background-color: red;
     width: 50%;
     .menu ul {
       display: flex;
-      //background-color: red;
 
       li {
-        //margin-right: 30px;
         position: relative;
         margin: 20px 30px 20px 0;
         @include primary-txt;
@@ -57,14 +53,13 @@ main {
       width: 435px;
       height: 56px;
       margin: 35px 0;
-      font-weight: 400; //P DELETED
+      font-weight: 400;
       font-size: 16px;
       line-height: 28px;
       color: #808080;
     }
 
     .btns {
-      //background-color: #808080;
       margin-top: 60px;
       button {
         margin-right: 20px;
@@ -106,7 +101,6 @@ main {
   }
 
   .container-image {
-    //background-color: #808080;
     display: flex;
     justify-content: center;
     align-items: center;
